Fixed button sizing on mobile

--- a/src/pages/home/style.less
+++ b/src/pages/home/style.less
@@ -63,3 +63,22 @@
     font-size: 2em;
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .home-grid{
+    .buttons{
+      display: flex;
+      justify-content: space-evenly;
+
+      .button{
+        width: 35%;
+        font-size: .5em;
+      }
+    }
+    
+    .home-description {
+      width: 100vw;
+      font-size: 1.7em;
+    }
+  }
+}
